# reqcoon

./: .gitignore  .gitmodules  Cargo.toml  README.md  test.json
src/: component.rs  http.pest  input.rs  main.rs  model.rs  text_wrapping.rs  tmux.rs  tui.rs  view.rs
src/component/: app.rs
src/input/: dummy_input.rs  multiline_readonly_input.rs  oneline_input.rs
