[package]
name = "reqcoon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
clap = { version = "4.5.1", features = ["derive"] }
clippers = "0.1.2"
crossterm = "0.27.0"
enum-iterator = "1.5.0"
http = "1"
http-auth-basic = "0.3"
json = "0.12.4"
log = "0.4"
nonempty = { version = "0.10.0", features = ["serde"] }
pest = "2.7"
pest_derive = "2.7"
ratatui = "0.26.2"
regex = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
simple-logging = "2.0"
tui-textarea = "0.4"

[patch.crates-io]
tui-textarea = { git = 'https://github.com/nickpwhite/tui-textarea.git' }
