[package]
name = "reqcoon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
clippers = "0.1.2"
crossterm = "0.27.0"
enum-iterator = "2.1"
http-auth-basic = "0.3"
json = "0.12"
log = "0.4"
nonempty = { version = "0.10.0", features = ["serde"] }
pest = "2"
pest_derive = "2"
ratatui = "0.27"
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
simple-logging = "2"
tui-textarea = { path = "tui-textarea", features = ["serde"] }
